--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,13 +1,17 @@
+body{
+    margin: 0px;
+    background-color: rgb(116, 115, 115);
+    font-family: Arial, Helvetica, sans-serif, serif;
+}
 header{
-    border: 2px dashed black;
+    background-color: darkgray;
+    display: flex;
 }
 
-header ul{
-    text-align: right;
-}
-
-header li{
-    display: inline;
+header h1{
+    float: left;
+    width: 75%;
+    align-self: center;
 }
 
 figure{
@@ -26,12 +30,72 @@ footer{
 }
 
 .side-box{
-    width: 200px;
-    height: 100px;
     border-right: 5px solid black;
     text-align: right;
+    width: 20%;
+    height: 150px;
+    padding-right: 15px;
+    font-size: 40px;
+    font-weight: bold;
 }
 
-.content-box{
-    text-align: right;
+.container{
+    display: flex;
+    justify-content: right;
+}
+
+.content-text{
+    text-align: left;
+    border: 2px dashed black;  
+    width: 75%;
+    margin: auto;
+}
+
+.content-cards{
+    text-align: left;
+    border: 2px dashed black;  
+    width: 75%;
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.content-contact{
+    text-align: left;
+    border: 2px dashed black;  
+    width: 75%;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.navbar{
+    display: flex;
+    background-color: rgb(22, 133, 68);
+    height: 50px;
+    width: 40%;
+    align-self: center;
+    justify-content: space-around;
+    text-align: center;
+}
+
+.navbar-item{
+    display: inline;
+    border: 2px dashed black;
+    justify-content: right;
+    text-decoration: none;
+    color: black;
+    margin: 0px 20px;
+
+}
+a, a:hover, a:focus, a:active {
+    text-decoration: none;
+    color: inherit;
+}
+img{
+    display: block;
+    margin: 0 auto;
+    width: 50%;
 }
